fix sidebar after logout not shown on mobile

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -253,4 +253,10 @@ label {
         display:flex !important;
      }
   }
+
+  #sidebar-wrapper:not(.show):not(.collapse){
+    @include media-breakpoint-down(sm) {
+      display:block;
+    }
+  }
 }
